# todo-fastapi-crud

./: .gitignore  README.md  database.py  init_db.py  main.py  models.py  pyproject.toml  schema.py  utility.py
tests/: conftest.py  test_main.py
